--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -25,7 +25,7 @@
 				</tr>
 			</table>
 			<h2>A Thing To Note</h2>
-			<p>For the vast majority of computer users, you DO NOT need to build your own PC. If you do not feel comfortable dealing with computer parts, then just buy a pre-built computer, or even a laptop. While pre-built towers tend to be more expensive than just building it on your own, one can easily break components or get electrocuted by improperly building a PC. Custom-built PC sare also typically meant for those who need a very high performance computer with expensive parts.<br></p>
+			<p>For the vast majority of computer users, you DO NOT need to build your own PC. If you do not feel comfortable dealing with computer parts, then just buy a pre-built computer, or even a laptop. While pre-built towers tend to be more expensive than just building it on your own, one can easily break components or get electrocuted by improperly building a PC. Custom-built PCs are also typically meant for those who need a very high performance computer with expensive parts.<br></p>
 			<table>
 				<colgroup>
 					<col width="40%" />
@@ -35,7 +35,7 @@
 					<td><h2>For Portability</h2></td>
 					<td> 
 						<p>
-							<a href="https://www.dell.com/en-us/shop/dell-laptops/latitude-7440-laptop/spd/latitude-14-7440-2-in-1-laptop/gctol7440usvp?redirectTo=SOC">Dell Latitude 7440 Laptop (Management disabled, 256GB SSD, no fingerprint reader, 3-cell 57-Wh boost-capable battery)</a>
+							<a href="https://www.dell.com/en-us/shop/dell-laptops/latitude-7440-laptop/spd/latitude-14-7440-2-in-1-laptop/gctol7440usvp?redirectTo=SOC">Dell Latitude 7440 Laptop (1400$: vPro management disabled, 256GB SSD, no fingerprint reader, 3-cell 57-Wh boost-capable battery)</a><br>
 							- Suitable for college students and those who travel frequently<br>
 							- Cannot smoothly run games or applications that require many resources<br>
 							- Tend to be more difficult to repair<br>
@@ -47,17 +47,19 @@
 					<td><h2>For The Artists</h2></td>
 					<td>
 						<p>
-							<a href="https://www.dell.com/en-us/shop/dell-laptops/latitude-7440-laptop/spd/latitude-14-7440-2-in-1-laptop/gctol7440usvp?redirectTo=SOC">Mac Studio (2000$, 38 core GPU, 32GB RAM, 512GB SSD, no pre-installed software)</a>
+							<a href="https://www.apple.com/shop/buy-mac/mac-studio/12-core-cpu-30-core-gpu-16-core-neural-engine-32gb-memory-512gb">Mac Studio (2000$: 38 core GPU, 32GB RAM, 512GB SSD, no pre-installed software)</a><br>
 							- Suitable for Adobe, Apple and others products requiring graphical or audio processing<br>
 							- Power efficient for its processing power<br>
 							- On the pricer end for computers<br>
-							- Proprietary OS has a lack of backwards-compatability
+							- Proprietary OS has a lack of backwards-compatability, especially with games
 					</p>
 					</td>
 				</tr>
 				<tr>
 					<td><h2>"It Just Works"</h2></td>
-					<td></td>
+					<td>
+						<p></p>
+					</td>
 				</tr>
 				<tr>
 					<td><h2>For The Gamers</h2></td>
