--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -58,15 +58,36 @@
 				<tr>
 					<td><h2>"It Just Works"</h2></td>
 					<td>
-						<p></p>
+						<p>
+							<a href="https://amso.eu/en/products/computers/processor/intel-core-i5-computers/desktop-computer-tower-pc-i5-6400-4x2-7ghz-8gb-ddr4-240gb-ssd-windows-10-home-242360">Amso Desktop Tower PC (125$)</a><br>
+							- Meant for those who aren't experienced in the tech field
+							- Very easy to troubleshoot due to durability and non-complexity
+							- Extremely inexpensive due its low specifications
+							- Only browsers and Microsoft utilities run well on it
+						</p>
 					</td>
 				</tr>
 				<tr>
-					<td><h2>For The Gamers</h2></td>
+					<td><h2>For The Gamers (custom build)</h2></td>
+					<p>
+						- CPU: <a href="https://shop-us-en.amd.com/amd-ryzen-7-7800x3d-processor/">AMD Ryzen 7 7800X3D Processor (450$)</a><br>
+						- GPU: <a href="https://www.gigabyte.com/Graphics-Card/GV-N408SAERO-OC-16GD#kf">GeForce RTX 4080 SUPER AERO OC 16G (1725$)</a><br>
+						- Cooling system: <a href="https://www.corsair.com/us/en/p/cpu-coolers/cw-9061001-ww/icue-link-h100i-rgb-aio-liquid-cpu-cooler-cw-9061001-ww">iCUE LINK H100i RGB AIO Liquid CPU Cooler (150$)</a><br>
+						- Motherboard: <a href="https://rog.asus.com/us/motherboards/rog-strix/rog-strix-x870-a-gaming-wifi/">ROG STRIX X870-A GAMING WIFI (350$)</a><br>
+						- PSU: <a href="https://www.coolermaster.com/en-us/products/gx-iii-gold-850/">GX III Gold 850 (140$)</a><br>
+						- RAM: 
+						- Storage space: Recommended <a href="https://a.co/d/hO3OdD9">SAMSUNG 1TB SSD (150$)</a> + <a href="https://a.co/d/5eAiyex">Seagate 4TB HDD (85$)</a>
+					</p>
 					<td></td>
 				</tr>
 				<tr>
 					<td><h2>For The IT Person</h2></td>
+					<p>
+						<a href="https://www.youtube.com/watch?v=gMA1FUpuELo">Raspberry Pi 4 Model B 8GB (75$)</a><br>
+						- For those who are knowledgeable about computers and doing research<br>
+						- Does not need to follow guides to understand what suits their needs<br>
+						- If you're actually reading this, I just put the Raspberry Pi in for enjoyment, as Pis are used for servers, robots, etc.; IT stuff
+					</p>
 					<td></td>
 				</tr>
 			</table>
