--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -68,17 +68,19 @@
 					</td>
 				</tr>
 				<tr>
-					<td><h2>For The Gamers (custom build)</h2></td>
-					<p>
-						- CPU: <a href="https://shop-us-en.amd.com/amd-ryzen-7-7800x3d-processor/">AMD Ryzen 7 7800X3D Processor (450$)</a><br>
-						- GPU: <a href="https://www.gigabyte.com/Graphics-Card/GV-N408SAERO-OC-16GD#kf">GeForce RTX 4080 SUPER AERO OC 16G (1725$)</a><br>
-						- Cooling system: <a href="https://www.corsair.com/us/en/p/cpu-coolers/cw-9061001-ww/icue-link-h100i-rgb-aio-liquid-cpu-cooler-cw-9061001-ww">iCUE LINK H100i RGB AIO Liquid CPU Cooler (150$)</a><br>
-						- Motherboard: <a href="https://rog.asus.com/us/motherboards/rog-strix/rog-strix-x870-a-gaming-wifi/">ROG STRIX X870-A GAMING WIFI (350$)</a><br>
-						- PSU: <a href="https://www.coolermaster.com/en-us/products/gx-iii-gold-850/">GX III Gold 850 (140$)</a><br>
-						- RAM: 
-						- Storage space: Recommended <a href="https://a.co/d/hO3OdD9">SAMSUNG 1TB SSD (150$)</a> + <a href="https://a.co/d/5eAiyex">Seagate 4TB HDD (85$)</a>
-					</p>
-					<td></td>
+					<td>
+						<h2>For The Gamers (custom build)</h2></td>
+					<td>
+						<p>
+							- CPU: <a href="https://shop-us-en.amd.com/amd-ryzen-7-7800x3d-processor/">AMD Ryzen 7 7800X3D Processor (450$)</a><br>
+							- GPU: <a href="https://www.gigabyte.com/Graphics-Card/GV-N408SAERO-OC-16GD#kf">GeForce RTX 4080 SUPER AERO OC 16G (1725$)</a><br>
+							- Cooling system: <a href="https://www.corsair.com/us/en/p/cpu-coolers/cw-9061001-ww/icue-link-h100i-rgb-aio-liquid-cpu-cooler-cw-9061001-ww">iCUE LINK H100i RGB AIO Liquid CPU Cooler (150$)</a><br>
+							- Motherboard: <a href="https://rog.asus.com/us/motherboards/rog-strix/rog-strix-x870-a-gaming-wifi/">ROG STRIX X870-A GAMING WIFI (350$)</a><br>
+							- PSU: <a href="https://www.coolermaster.com/en-us/products/gx-iii-gold-850/">GX III Gold 850 (140$)</a><br>
+							- RAM: 
+							- Storage space: Recommended <a href="https://a.co/d/hO3OdD9">SAMSUNG 1TB SSD (150$)</a> + <a href="https://a.co/d/5eAiyex">Seagate 4TB HDD (85$)</a>
+						</p>
+					</td>
 				</tr>
 				<tr>
 					<td><h2>For The IT Person</h2></td>
