--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -60,9 +60,9 @@
 					<td>
 						<p>
 							<a href="https://amso.eu/en/products/computers/processor/intel-core-i5-computers/desktop-computer-tower-pc-i5-6400-4x2-7ghz-8gb-ddr4-240gb-ssd-windows-10-home-242360">Amso Desktop Tower PC (125$)</a><br>
-							- Meant for those who aren't experienced in the tech field
-							- Very easy to troubleshoot due to durability and non-complexity
-							- Extremely inexpensive due its low specifications
+							- Meant for those who aren't experienced in the tech field<br>
+							- Very easy to troubleshoot due to durability and non-complexity<br>
+							- Extremely inexpensive due its low specifications<br>
 							- Only browsers and Microsoft utilities run well on it
 						</p>
 					</td>
@@ -84,13 +84,14 @@
 				</tr>
 				<tr>
 					<td><h2>For The IT Person</h2></td>
-					<p>
-						<a href="https://www.youtube.com/watch?v=gMA1FUpuELo">Raspberry Pi 4 Model B 8GB (75$)</a><br>
-						- For those who are knowledgeable about computers and doing research<br>
-						- Does not need to follow guides to understand what suits their needs<br>
-						- If you're actually reading this, I just put the Raspberry Pi in for enjoyment, as Pis are used for servers, robots, etc.; IT stuff
-					</p>
-					<td></td>
+					<td>
+						<p>
+							<a href="https://www.youtube.com/watch?v=gMA1FUpuELo">Raspberry Pi 4 Model B 8GB (75$)</a><br>
+							- For those who are knowledgeable about computers and doing research<br>
+							- Does not need to follow guides to understand what suits their needs<br>
+							- If you're actually reading this, I just put the Raspberry Pi in for enjoyment, as Pis are used for servers, robots, etc.; IT stuff
+						</p>
+					</td>
 				</tr>
 			</table>
 		</div>
