--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -32,7 +32,10 @@
 					<col width="60%" />
 				</colgroup>
 				<tr>
-					<td><h2>For Portability</h2></td>
+					<td>
+						<h2>For Portability</h2>
+						<img src="../images/portable.avif" alt="Dell Latitude 7440">
+					</td>
 					<td> 
 						<p>
 							<a href="https://www.dell.com/en-us/shop/dell-laptops/latitude-7440-laptop/spd/latitude-14-7440-2-in-1-laptop/gctol7440usvp?redirectTo=SOC">Dell Latitude 7440 Laptop (1400$: vPro management disabled, 256GB SSD, no fingerprint reader, 3-cell 57-Wh boost-capable battery)</a><br>
@@ -44,7 +47,10 @@
 					</td>
 				</tr>
 				<tr>
-					<td><h2>For The Artists</h2></td>
+					<td>
+						<h2>For The Artists</h2>
+						<img src="../images/artists.jpg" alt="Mac Studio">
+					</td>
 					<td>
 						<p>
 							<a href="https://www.apple.com/shop/buy-mac/mac-studio/12-core-cpu-30-core-gpu-16-core-neural-engine-32gb-memory-512gb">Mac Studio (2000$: 38 core GPU, 32GB RAM, 512GB SSD, no pre-installed software)</a><br>
@@ -56,7 +62,10 @@
 					</td>
 				</tr>
 				<tr>
-					<td><h2>"It Just Works"</h2></td>
+					<td>
+						<h2>"It Just Works"</h2>
+						<img src="../images/works.jpg" alt="Generic older tower">
+					</td>
 					<td>
 						<p>
 							<a href="https://amso.eu/en/products/computers/processor/intel-core-i5-computers/desktop-computer-tower-pc-i5-6400-4x2-7ghz-8gb-ddr4-240gb-ssd-windows-10-home-242360">Amso Desktop Tower PC (125$)</a><br>
@@ -69,7 +78,9 @@
 				</tr>
 				<tr>
 					<td>
-						<h2>For The Gamers (custom build)</h2></td>
+						<h2>For The Gamers (custom build)</h2>
+						<img src="../images/epic.jpg" alt="Custom high-end build">
+					</td>
 					<td>
 						<p>
 							- CPU: <a href="https://shop-us-en.amd.com/amd-ryzen-7-7800x3d-processor/">AMD Ryzen 7 7800X3D Processor (450$)</a><br>
@@ -77,19 +88,23 @@
 							- Cooling system: <a href="https://www.corsair.com/us/en/p/cpu-coolers/cw-9061001-ww/icue-link-h100i-rgb-aio-liquid-cpu-cooler-cw-9061001-ww">iCUE LINK H100i RGB AIO Liquid CPU Cooler (150$)</a><br>
 							- Motherboard: <a href="https://rog.asus.com/us/motherboards/rog-strix/rog-strix-x870-a-gaming-wifi/">ROG STRIX X870-A GAMING WIFI (350$)</a><br>
 							- PSU: <a href="https://www.coolermaster.com/en-us/products/gx-iii-gold-850/">GX III Gold 850 (140$)</a><br>
-							- RAM: 
+							- RAM: Recommended <a href="https://a.co/d/aW6Sult">G.SKILL Trident Z5 DDR5 RAM 64GB (210$)</a><br>
 							- Storage space: Recommended <a href="https://a.co/d/hO3OdD9">SAMSUNG 1TB SSD (150$)</a> + <a href="https://a.co/d/5eAiyex">Seagate 4TB HDD (85$)</a>
 						</p>
 					</td>
 				</tr>
 				<tr>
-					<td><h2>For The IT Person</h2></td>
+					<td>
+						<h2>For The IT Person</h2>
+						<img src="../images/pi.jpg" alt="Raspberry pi 4 model B">
+					</td>
 					<td>
 						<p>
 							<a href="https://www.youtube.com/watch?v=gMA1FUpuELo">Raspberry Pi 4 Model B 8GB (75$)</a><br>
 							- For those who are knowledgeable about computers and doing research<br>
 							- Does not need to follow guides to understand what suits their needs<br>
-							- If you're actually reading this, I just put the Raspberry Pi in for enjoyment, as Pis are used for servers, robots, etc.; IT stuff
+							- If you're actually reading this, I just put the Raspberry Pi in for enjoyment, as Pis are used for servers, robots, etc.; IT stuff<br>
+							- I wanted to have 5 entries, one for computer nerds, but there are too many variables to consider
 						</p>
 					</td>
 				</tr>
