--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a href="https://brookeplays.github.io/bcc">Brooke's Class Calculator (started around mid 2021)</a> <br>
 			<a href="https://brookeplays.github.io/jailbreak">Jailbreak repo (started around early 2021)</a> <br>
 			<a href="https://brookeplays.github.io/choices">Choices game (started around late 2023)</a>
+			<a href="https://brookeplays.github.io/CSC150">CSC150 Assignment (started around late 2024)</a>
 		</div>
     </body>
 <html>
