--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>This is a little hub for my little projects. Feel free to explore.</p> <br>
 			<a href="https://dabrookeplayz.github.io/bcc">Brooke's Class Calculator (started around mid 2021)</a> <br>
 			<a href="https://dabrookeplayz.github.io/jailbreak">Jailbreak repo (started around early 2021)</a> <br>
-			<a href="https://dabrookeplayz.github.io/choices">Choices game (started around late 2023)</a>
+			<a href="https://dabrookeplayz.github.io/choices">Choices game (started around late 2023)</a> <br>
 			<a href="https://dabrookeplayz.github.io/CSC150">CSC150 Assignment (started around late 2024)</a>
 		</div>
     </body>
