--- a/CSC150/compParts/index.html
+++ b/CSC150/compParts/index.html
@@ -133,7 +133,7 @@
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
-			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/">Homepage</a>
+			<a href="https://dabrookeplayz.github.io/CSC150/contact">Contact Us</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/CSC150/privacy">Privacy Policy</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/CSC150/terms">Terms of Use</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/CSC150/">Homepage</a>
 		</div>
 	</body>
 </html>
